--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,5 @@
 .header {
+  background-color: white;
   position: sticky;
   top: 0;
   display: flex;
@@ -28,7 +29,7 @@
   padding: 10px;
   display: flex;
   align-items: center;
-  border-radius: 5px;
+  border-radius: 10px;
   height: 22px;
   color: gray;
   background-color: #eef3f8;
