--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -74,3 +74,28 @@
   border-radius: 10px;
   margin-top: 10px;
 }
+
+.sidebar__recentItem {
+  display: flex;
+  font-size: 13px;
+  color: gray;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.sidebar__bottom > p {
+  font-size: 13px;
+  padding-bottom: 10px;
+}
+
+.sidebar__recentItem:hover {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+.sidebar__hash {
+  margin-right: 10px;
+  margin-left: 10px;
+}
