--- a/src/Login.css
+++ b/src/Login.css
@@ -20,7 +20,7 @@
 }
 
 .login > form > input {
-  width: 300px;
+  width: 350px;
   height: 50px;
   font-size: 20px;
   padding-left: 10px;
@@ -29,7 +29,7 @@
 }
 
 .login > form > button {
-  width: 318px;
+  width: 365px;
   height: 50px;
   font-size: 20px;
   font-size: large;
@@ -39,6 +39,7 @@
 }
 
 .login__register {
+  cursor: pointer;
   color: #0074b1;
   cursor: pointer;
 }
